Sandbox/02-12-2025/force-app/main/default/objects/Campaign_Mapping__c/Campaign_Mapping__c.object-meta.xml
<CustomObject>
    <label>Campaign Mapping</label>
    <nameField>
        <displayFormat>CM-{000000000}</displayFormat>
        <label>Campaign Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>