Sandbox/02-12-2025/force-app/main/default/objects/Campaign_Mapping__c/fields/Advertiser_Account__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advertiser Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Mappings</relationshipLabel>
    <relationshipName>Campaign_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>