Sandbox/02-12-2025/force-app/main/default/objects/Campaign_Mapping__c/fields/Advertiser_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Account_ID__c</fullName>
    <formula>Advertiser_Account__r.Id</formula>
    <label>Advertiser Account ID</label>
    <type>Text</type>
</CustomField>