Sandbox/02-12-2025/force-app/main/default/objects/Campaign_Mapping__c/fields/Advertiser_Sector_2__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Sector_2__c</fullName>
    <formula>Advertiser_Account__r.Advertiser_Sector_2_For_Adv_Mappings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertiser Sector 2</label>
    <type>Text</type>
</CustomField>