Sandbox/02-12-2025/force-app/main/default/objects/Campaign_Mapping__c/listViews/All_Campaign_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Campaign_Mappings</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Raw__c</columns>
    <columns>Advertiser__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign_Raw__c</field>
        <operation>equals</operation>
        <value>BUDGET AU</value>
    </filters>
    <label>All Campaign Mappings</label>
</ListView>