Sandbox/02-12-2025/force-app/main/default/objects/Campaign_Mapping__c/listViews/All_subway.listView-meta.xml
<ListView>
    <fullName>All_subway</fullName>
    <columns>Advertiser__c</columns>
    <columns>NAME</columns>
    <columns>Campaign_Raw__c</columns>
    <columns>Advertiser_Account__c</columns>
    <columns>Created_From_Exception__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Advertiser_Sector_1__c</columns>
    <columns>Advertiser_Sector_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign_Raw__c</field>
        <operation>equals</operation>
        <value>HMSYD_OFF_AUSTRALIA</value>
    </filters>
    <label>All_subway</label>
</ListView>