Sandbox/02-12-2025/force-app/main/default/objects/Campaign_Mapping__c/listViews/Campaign_Mapping_Exceptions.listView-meta.xml
<ListView>
    <fullName>Campaign_Mapping_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Raw__c</columns>
    <columns>Advertiser_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Advertiser__c</field>
        <operation>equals</operation>
        <value>HAVAS EDGE</value>
    </filters>
    <label>Campaign Mapping Exceptions</label>
</ListView>